--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
-<<<<<<< HEAD
-  <!DOCTYPE html>
-=======
  <!DOCTYPE html>
->>>>>>> bce96887936bbcd9415994742427c02892cc0b86
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Bootcamp</title>
- </head>
- <body>
-<<<<<<< HEAD
-     <h1> Hello World </h1>
- <label for="name">Enter your name:</label>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ASSIGNMENT ONE</title>
+</head>
+
+<body>
+    <h1>Hello World</h1>
+    <label for="name">Enter your name:</label>
     <input type="text" id="name" placeholder="Enter your name..." required>
     <button type="submit" id="btn">click me</button>
     <p id="text"></p>
- </body>
- <script src="./Assets/main.js"></script>
- </html> 
-=======
-     <h1> Hello World! </h1>
-     <input type ="text" value="My name">
-     <button type="button" onclick="myFunction()">Click Me!</button>
-    <p></p>
- </body>
- <source src="./Assets/main.js">
-  <link rel="stylesheet" href="styles.css">
- </html>
->>>>>>> bce96887936bbcd9415994742427c02892cc0b86
+
+
+    <script src="./Assets/main.js"></script>
+</body>
+
+</html>
